<resources>
    <string name="app_name">Lab2</string>
    <string name="oneone">One,One</string>
    <string name="onetwo">One,Two</string>
    <string name="onethree">One,Three</string>
    <string name="onefour">One,Four</string>
    <string name="twoone">Two,One</string>
    <string name="twotwo">Two,Two</string>
    <string name="twothree">Two,Three</string>
    <string name="twofour">Two,Four</string>
    <string name="threeone">Three,One</string>
    <string name="threetwo">Three,Two</string>
    <string name="threethree">Three,Three</string>
    <string name="threefour">Three,Four</string>
    <string name="fourone">Four,One</string>
    <string name="fourtwo">Four,Two</string>
    <string name="fourthree">Four,Three</string>
    <string name="fourfour">Four,Four</string>
    <string name="input">Input</string>
    <string name="zeropointzero">0.0</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="chuhao">÷</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="chenghao">×</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="jiahao">+</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="dengyu">=</string>
    <string name="jianhao">-</string>
    <string name="open">Open...</string>
    <string name="ctrlo">Ctrl-O</string>
    <string name="save">Save...</string>
    <string name="ctrls">Ctrl-S</string>
    <string name="saveas">Save As...</string>
    <string name="ctrlshifts">Ctrl-Shift-S</string>
    <string name="x">X</string>
    <string name="import.">Import...</string>
    <string name="export.">Export...</string>
    <string name="ctrle">Ctrl-E</string>
    <string name="quit">Quit</string>
</resources>