<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="2">

    <TableRow>

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ctrlo"
            android:textSize="30sp"
            android:layout_gravity="right"/>

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ctrls"
            android:textSize="30sp"
            android:layout_gravity="right"/>

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveas"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ctrlshifts"
            android:textSize="30sp"
            android:layout_gravity="right"/>

    </TableRow>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"/>

    <TableRow>

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import."
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp"
            android:layout_gravity="right"/>

    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export."
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ctrle"
            android:textSize="30sp"
            android:layout_gravity="right"/>

    </TableRow>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"/>

    <TableRow>

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="30sp"
            android:layout_gravity="right"/>

    </TableRow>

</TableLayout>